Spring Boot 3 and Vaadin 24 update